CSS - Fixed spacing in Skill and fixed corner border on tablet and smaller

--- a/src/components/Sections/CharacterCreator/SkillSelector/Skill/Skill.module.scss
+++ b/src/components/Sections/CharacterCreator/SkillSelector/Skill/Skill.module.scss
@@ -13,6 +13,7 @@
   background-color: var(--color-border-transparent);
   font-weight: 600;
   @include flexbox(space-between);
+  // flex: 0 0 auto;
   // display: grid;
   // grid-template-columns: 1fr 7fr 1fr;
   // gap: 0.375rem;
@@ -42,16 +43,19 @@
     }
   }
   .name {
-    width: 50%;
+    width: 100%;
     height: 100%;
     padding: 0 6px;
-
+    font-size: 1.125rem;
     // height: 100%;
     text-align: start;
     overflow: hidden;
-
+    // margin-left: -45px;
+    // border: 1px solid red;
     @include flexbox(flex-start);
-    white-space: nowrap;
+
+    // white-space: nowrap;
+    float: left;
     text-overflow: ellipsis;
   }
   .manage-skill {
@@ -64,7 +68,7 @@
     @include flexbox;
     // border: 1px solid red;
     position: relative;
-    background-color: var(--color-dark);
+    background-color: #232323;
     transform: scale(1.1);
     p {
       position: absolute;
@@ -95,7 +99,7 @@
     // }
     &-number {
       position: absolute;
-      top: 5px;
+      top: 7px;
       right: 5px;
 
       font-size: 18px;
